migrate to sbt2